Update api documents
