# docs/swagger.yaml
@@ -18,24 +18,209 @@ definitions:
         example: 27.5
         type: number
     type: object
+  agent.SwitchBot:
+    properties:
+      mac:
+        example: xx:xx:xx:xx:xx:xx
+        type: string
+      state:
+        example: "ON"
+        type: string
+      type:
+        example: TOGGLE
+        type: string
+    type: object
+  aircon.Entry:
+    properties:
+      fan:
+        example: auto
+        type: string
+      horizontal_vane:
+        example: auto
+        type: string
+      humid:
+        example: 50%
+        type: string
+      mode:
+        example: cool
+        type: string
+      operation:
+        example: false
+        type: boolean
+      temp:
+        type: object
+      vertical_vane:
+        example: auto
+        type: string
+    type: object
+  aircon.ModeEntry:
+    properties:
+      fan:
+        example: auto
+        type: string
+      horizontal_vane:
+        example: swing
+        type: string
+      humid:
+        example: 50%
+        type: string
+      temp:
+        type: object
+      vertical_vane:
+        example: swing
+        type: string
+    type: object
+  aircon.State:
+    properties:
+      mode:
+        example: cool
+        type: string
+      modes:
+        additionalProperties:
+          $ref: '#/definitions/aircon.ModeEntry'
+        type: object
+      operation:
+        example: false
+        type: boolean
+    type: object
+  controller.Entry:
+    properties:
+      aircon:
+        $ref: '#/definitions/aircon.State'
+        description: Aircon - State of Aircon
+        type: object
+      id:
+        description: ID - Generated ID
+        example: <UNIQUE_ID>
+        type: string
+      kind:
+        description: Kind - AIRCON, LIGHT, SWITCHBOT...
+        example: AIRCON
+        type: string
+      name:
+        description: Name - ex. Bedroom Airconditioner
+        example: Bedroom Airconditioner
+        type: string
+      remote:
+        $ref: '#/definitions/controller.Remote'
+        description: Remote - Remote Controller settings (required when type is REMOTE)
+        type: object
+      switchbot:
+        $ref: '#/definitions/agent.SwitchBot'
+        description: SwitchBot - SwitchBot settings (required when type is SWITCHBOT)
+        type: object
+      type:
+        description: Type - type of controller (how to use?) / ex. REMOTE, SWITCHBOT...
+        example: REMOTE
+        type: string
+    required:
+    - kind
+    - name
+    - type
+    type: object
+  controller.Remote:
+    properties:
+      model:
+        example: daikin01
+        type: string
+      vendor:
+        example: daikin
+        type: string
+    type: object
+  room.Entry:
+    properties:
+      id:
+        description: ID - Room ID
+        type: string
+      name:
+        description: 'Name - Room name (ex: `john''s room`)'
+        example: john's room
+        type: string
+    type: object
+  room.Room:
+    properties:
+      ambient:
+        $ref: '#/definitions/agent.Ambient'
+        description: Ambient - Room ambient (from agent)
+        type: object
+      id:
+        description: ID - Room ID
+        type: string
+      name:
+        description: 'Name - Room name (ex: `john''s room`)'
+        example: john's room
+        type: string
+    type: object
   server.CreateRoomRequest:
     properties:
       name:
         example: john's room
         type: string
     type: object
-  server.RoomResponse:
+  server.GetRemotesResponse:
     properties:
-      ambient:
-        $ref: '#/definitions/agent.Ambient'
+      aircon:
+        additionalProperties:
+          items:
+            type: string
+          type: array
         type: object
-      room:
-        $ref: '#/definitions/storage.Room'
+    type: object
+  server.RemoteController:
+    properties:
+      model:
+        example: daikin01
+        type: string
+      vendor:
+        example: daikin
+        type: string
+    required:
+    - model
+    - vendor
+    type: object
+  server.SetControllerRequest:
+    properties:
+      kind:
+        description: Kind - AIRCON, LIGHT, SWITCHBOT...
+        example: AIRCON
+        type: string
+      name:
+        description: Name - ex. Bedroom Airconditioner
+        example: Bedroom Airconditioner
+        type: string
+      remote:
+        $ref: '#/definitions/server.RemoteController'
+        description: Remote - Remote Controller settings (required when type is REMOTE)
         type: object
+      switchbot:
+        $ref: '#/definitions/server.SwitchBotController'
+        description: SwitchBot - SwitchBot settings (required when type is SWITCHBOT)
+        type: object
+      type:
+        description: Type - type of controller (how to use?) / ex. REMOTE, SWITCHBOT...
+        example: REMOTE
+        type: string
+    required:
+    - kind
+    - name
+    - type
+    type: object
+  server.SwitchBotController:
+    properties:
+      mac:
+        example: FF:FF:FF:FF:FF:FF
+        type: string
+      type:
+        example: TOGGLE
+        type: string
+    required:
+    - mac
+    - type
     type: object
   server.UpdateAgentRequest:
     properties:
       address:
+        description: Address of Pigent
         example: localhost:8081
         type: string
     required:
@@ -57,20 +242,94 @@ definitions:
     required:
     - address
     type: object
-  storage.Room:
+  template.Action:
     properties:
-      id:
-        description: ID - Room ID
-        type: string
-      name:
-        description: 'Name - Room name (ex: `john''s room`)'
-        example: john's room
-        type: string
-      remotes:
-        description: Remotes - Remote IDs
+      default:
+        type: object
+      list:
         items:
-          type: string
+          type: object
         type: array
+      multiple:
+        items:
+          $ref: '#/definitions/template.Action'
+        type: array
+      range:
+        $ref: '#/definitions/template.Range'
+        type: object
+      shot:
+        $ref: '#/definitions/template.Shot'
+        type: object
+      toggle:
+        $ref: '#/definitions/template.Toggle'
+        type: object
+      type:
+        type: integer
+    type: object
+  template.Aircon:
+    properties:
+      modes:
+        additionalProperties:
+          $ref: '#/definitions/template.AirconMode'
+        type: object
+      operation:
+        $ref: '#/definitions/template.Action'
+        type: object
+    type: object
+  template.AirconMode:
+    properties:
+      fan:
+        $ref: '#/definitions/template.Action'
+        type: object
+      horizontal_vane:
+        $ref: '#/definitions/template.Action'
+        type: object
+      humid:
+        $ref: '#/definitions/template.Action'
+        type: object
+      temp:
+        $ref: '#/definitions/template.Action'
+        type: object
+      vertical_vane:
+        $ref: '#/definitions/template.Action'
+        type: object
+    type: object
+  template.Range:
+    properties:
+      from:
+        type: number
+      prefix:
+        type: string
+      step:
+        type: number
+      suffix:
+        type: string
+      to:
+        type: number
+    type: object
+  template.Shot:
+    properties:
+      value:
+        type: object
+    type: object
+  template.Template:
+    properties:
+      aircon:
+        $ref: '#/definitions/template.Aircon'
+        type: object
+      kind:
+        type: string
+      model:
+        type: string
+      vendor:
+        type: string
+    type: object
+  template.Toggle:
+    properties:
+      "off":
+        type: object
+      "on":
+        type: object
     type: object
 info:
   contact: {}
@@ -124,6 +383,116 @@ paths:
       summary: Get Sensors status form agent
       tags:
       - agent
+  /api/v1/controllers:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/controller.Entry'
+            type: array
+      summary: Get controllers
+      tags:
+      - controller
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Add new controller
+        in: body
+        name: entry
+        required: true
+        schema:
+          $ref: '#/definitions/server.SetControllerRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Entry'
+      summary: Add new controller
+      tags:
+      - controller
+  /api/v1/controllers/:id:
+    delete:
+      produces:
+      - application/json
+      responses:
+        "200": {}
+      summary: Delete controller by ID
+      tags:
+      - controller
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Entry'
+      summary: Get controller by ID
+      tags:
+      - controller
+    patch:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Entry'
+      summary: Patch controller by ID
+      tags:
+      - controller
+  /api/v1/controllers/:id/aircon:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/aircon.Entry'
+      summary: Post Aircon by ID
+      tags:
+      - controller
+  /api/v1/controllers/:id/switchbot:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200": {}
+      summary: Post SwitchBot by ID
+      tags:
+      - controller
+  /api/v1/controllers/:id/template:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/template.Template'
+      summary: Get controller template by ID
+      tags:
+      - controller
+  /api/v1/remotes:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/server.GetRemotesResponse'
+      summary: Get remote controllers
+      tags:
+      - controller
   /api/v1/room:
     get:
       produces:
@@ -132,7 +501,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.RoomResponse'
+            $ref: '#/definitions/room.Room'
       summary: Get Room entry
       tags:
       - room
@@ -152,7 +521,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/storage.Room'
+            $ref: '#/definitions/room.Entry'
       summary: Craete Room entry
       tags:
       - room
