# pkg/controller/remote.go
@@ -2,6 +2,6 @@ package controller
 
 // Remote - Declare Remote controller
 type Remote struct {
-	Vendor string `json:"vendor"`
-	Model  string `json:"model"`
+	Vendor string `json:"vendor" example:"daikin"`
+	Model  string `json:"model" example:"daikin01"`
 }
